<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020 Arye182
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">EasyDiet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="montserat_regular">fonts/Montserrat-Regular.ttf</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="pref_appVersion">App Version</string>
    <string name="pref_licenses" >Licenses</string>
    <string name="prefCategory_about">About</string>
    <string name="pref_notificationTime_dialog">Notification Time Dialog</string>
    <string name="pref_notificationTime_summary">summary</string>
    <string name="pref_notificationTime">Notification Time</string>
    <string name="pref_notificationToggle">On / Off</string>
    <string name="prefCategory_notifications">Notifications</string>
    <string name="pref_exampleCheckbox_summaryOff">Off</string>
    <string name="pref_exampleCheckbox_summaryOn">On</string>
    <string name="pref_exampleCheckbox_title">Check Box Example</string>
    <string name="prefCategory_general">General</string>
</resources>
