<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020 Arye182
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefCategory_general">

        <CheckBoxPreference
            android:key="pref_example_checkbox"
            android:title="@string/pref_exampleCheckbox_title"
            android:summaryOn="@string/pref_exampleCheckbox_summaryOn"
            android:summaryOff="@string/pref_exampleCheckbox_summaryOff"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefCategory_notifications">

        <SwitchPreference
            android:key="pref_enable_notifications"
            android:title="@string/pref_notificationToggle"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="pref_notification_time"
            android:title="@string/pref_notificationTime"
            android:summary="@string/pref_notificationTime_summary"
            android:inputType="number"
            android:dialogMessage="@string/pref_notificationTime_dialog"
            android:defaultValue="5" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefCategory_about">

        <Preference
            android:key="pref_about_licenses"
            android:title="@string/pref_licenses"
/>

        <Preference
            android:key="pref_about_app_version"
            android:title="@string/pref_appVersion" />
    </PreferenceCategory>

</PreferenceScreen>